Added rotation of the ball and nicer text

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
 <script src="ballcode.js"></script>
 </head>
 <body onload="init()">
-	<div id="highscore">Current High Score:</div>
-	<div id="score">Score:</div>
+	<div class="text">
+	<br><br><br><br><br><br>
+	High Score:
+	<div id="highscore">0</div>
+	<br>
+	Current Score:
+	<div id="score">0</div>
+	</div>
 	<img id="ball" src="ball.png" onclick="clicked(event)" draggable="false">
 </body>
 </html>
