Added a title screen with a slow disappear

--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
 <script src="ballcode.js"></script>
 </head>
 <body onload="init()">
-	<div class="text">
-	<br><br><br><br>
-	High Score:
-	<div id="highscore">0</div>
-	<br>
-	Current Score:
-	<div id="score">0</div>
+	<div class="buffer text" >
+		High Score:
+		<div id="highscore">0</div>
+		<br>
+		Current Score:
+		<div id="score">0</div>
 	</div>
-	<img id="ball" src="ball.png" onclick="clicked(event)" draggable="false">
 </body>
 </html>
