--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 	<div id="button" onclick="instructions()"> How-To </div>
 
 	<div id="descBox">
-		<span style="position:absolute;width:100%;text-align:left;">SPEED UP</span>
-		<span style="position:absolute;width:100%;text-align:right;">SLOW DOWN</span>
-		<br>
+		<span style="position:absolute;width:100%;text-align:left;">EASIER</span>
+		<span style="position:absolute;width:100%;text-align:right;">HARDER</span>
 	</div>
-
+	<br>
 	<!--Values represent 10 milliseconds-->
-	<input id="slider" type="range" min="100" max="500" value="200"/>
+	<input id="slider" type="range" min="1" max="7" value="3"/>
 
 		<div class="text">
 			High Score:
