Fixed horizontal kick velocity with slower speeds, added basic framework for Codenames game

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="ballstyles.css">
-<script src="ballcode.js"></script>
+<link rel="stylesheet" type="text/css" href="styles.css">
+<script src="main.js"></script>
 </head>
 <body onload="init()">
 	<div id="button" onclick="instructions()"> How-To </div>
