--- a/index.html
+++ b/index.html
@@ -1,23 +1,9 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="styles.css">
-<script src="main.js"></script>
+
 </head>
-<body onload="init()">
-	<div id="button" onclick="instructions()"> How-To </div>
-	<div id="descBox">
-		<span style="position:absolute;width:100%;text-align:left;">EASIER</span>
-		<span style="position:absolute;width:100%;text-align:right;">HARDER</span>
-	</div>
-	<br>
-	<input id="slider" type="range" min="1" max="10" value="5"/>
-		<div class="text">
-			High Score:
-			<div id="highscore">0</div>
-			<br>
-			Current Score:
-			<div id="score">0</div>
-		</div>
-	<img id="ball" src="ball.png" onclick="clicked(event)" draggable="false">
+<body>
+Welcome to my website! This is a placeholder page, as the full website is still under development. In the meantime, feel free to check out this game I built:
+<a href="soccer/soccer.html"> Soccer Game </a>
 </body>
 </html>
