Added a scrolling carousel courtesy of Bootstrap

--- a/index.html
+++ b/index.html
@@ -1,9 +1,71 @@
-<html>
-<head>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<link rel="stylesheet" type="text/css" href="styles.css">
+	</head>
+	<body>
+		<div id="whoami" class="landing carousel slide darkback" data-ride="carousel">
 
-</head>
-<body>
-Welcome to my website! This is a placeholder page, as the full website is still under development. In the meantime, feel free to check out this game I built:
-<a href="soccer/soccer.html"> Soccer Game </a>
-</body>
+			<ol class="carousel-indicators">
+				<li data-target="#whoami" data-slide-to="0" class="active"></li>
+				<li data-target="#whoami" data-slide-to="1"></li>
+				<li data-target="#whoami" data-slide-to="2"></li>
+				<li data-target="#whoami" data-slide-to="3"></li>
+				<li data-target="#whoami" data-slide-to="4"></li>
+			</ol>
+
+			<div class="carousel-inner" role="listbox">
+				<div class="item active">
+
+					<div class="title">
+						Ian Lai
+						<div class="subtitle"> Who am I? </div>
+					</div>
+					<img src="Assets/sunpeaks.jpg" alt="Ian Lai">
+				</div>
+
+				<div class="item">
+					<div class="title">
+						Martial Artist
+					</div>
+					<img src="Assets/tkd.jpg" alt="Martial Artist">
+				</div>
+
+				<div class="item">
+					<div class="title">
+						Programmer
+					</div>
+					<img src="Assets/cs.png" alt="Meta pic aha">
+				</div>
+
+				<div class="item">
+					<div class="title">
+						Dragonboater
+					</div>
+					<img src="Assets/db.jpg" alt="Dragonboater">
+				</div>
+
+				<div class="item">
+					<div class="title">
+						24601
+					</div>
+					<img src="Assets/24601.jpg" alt="24601">
+				</div>
+
+			</div>
+
+		</div> <!--Close Carousel-->
+		<div class="container">
+			<div class="row">
+				<div class=".col-md-8 .col-md-offset-2 blueback">
+					Welcome to my website! This is a placeholder page, as the full website is still under development. In the meantime, feel free to check out this game I built:
+					<a href="soccer/soccer.html"> Soccer Game </a>
+				</div>
+			</div>
+		</div>
+
+	</body>
 </html>
