--- a/index.html
+++ b/index.html
@@ -24,35 +24,35 @@
 						Ian Lai
 						<div class="subtitle"> Who am I? </div>
 					</div>
-					<img src="Assets/sunpeaks.jpg" alt="Ian Lai">
+					<img src="assets/sunpeaks.jpg" alt="Ian Lai">
 				</div>
 
 				<div class="item">
 					<div class="title">
 						Martial Artist
 					</div>
-					<img src="Assets/tkd.jpg" alt="Martial Artist">
+					<img src="assets/tkd.jpg" alt="Martial Artist">
 				</div>
 
 				<div class="item">
 					<div class="title">
 						Programmer
 					</div>
-					<img src="Assets/cs.png" alt="Meta pic aha">
+					<img src="assets/cs.png" alt="Meta pic aha">
 				</div>
 
 				<div class="item">
 					<div class="title">
 						Dragonboater
 					</div>
-					<img src="Assets/db.jpg" alt="Dragonboater">
+					<img src="assets/db.jpg" alt="Dragonboater">
 				</div>
 
 				<div class="item">
 					<div class="title">
 						24601
 					</div>
-					<img src="Assets/24601.jpg" alt="24601">
+					<img src="assets/24601.jpg" alt="24601">
 				</div>
 
 			</div>
