Fixed weird spacing with ems on windows

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</div> <!--Close Carousel-->
 		<div class="container">
 			<div class="row">
-				<div class=".col-md-8 .col-md-offset-2 blueback">
+				<div class=".col-md-8 .col-md-offset-2 blueback text">
 					Welcome to my website! This is a placeholder page, as the full website is still under development. In the meantime, feel free to check out this game I built:
 					<a href="soccer/soccer.html"> Soccer Game </a>
 				</div>
