--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 			</div>
 			<br>
 			<div class="row">
-				<div class="col-md-6 col-md-offset-3 centered">
+				<div class="col-md-8 col-md-offset-2 centered">
 					<span class="title"> Technical Skills </span> <br>
-					<table class="table" id="skilltable">
+					<table id="skilltable">
 
 						<tr>
 							<td class="leftalign"> HTML <span class="stars"> 5 </span> </td>
