Background color, controls for carousel

--- a/index.html
+++ b/index.html
@@ -59,14 +59,25 @@
 
 			</div>
 
+			<a class="left carousel-control" href="#whoami" role="button" data-slide="prev">
+				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			
+			<a class="right carousel-control" href="#whoami" role="button" data-slide="next">
+				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+
 		</div> <!--Close Carousel-->
 
 		<div class="container-fluid">
 			<div class="row leftpad">
 
 				<div class="col-md-8" id="aboutme">
-					My name is Ian Lai from Vancouver, Canada, and I am a 2B Computer Science student studying at the<span class="b-orange"> University of Waterloo</span>.<br>
-					I am insatiably passionate about programming because to me, it represents an opportunity to impact others' lives and make them a <span class="b-orange">little bit better</span>, be it through communication, automation, or entertainment.
+					My name is Ian Lai from Vancouver, Canada, and I am a 2B Computer Science student studying at the
+					<span class="b-orange"> University of Waterloo</span>.<br>
+					I am <span class="b-orange">insatiably passionate about programming</span> because to me, it represents an endless series of problems to provoke, challenge, and mentally stimulate me.
 				</div>
 
 				<div class="col-md-3">
@@ -74,10 +85,10 @@
 				</div>
 
 			</div>
-			<br>
+			<br><br>
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 centered">
-					<span class="title"> Technical Skills </span> <br>
+					<span class="title"> Technical Skills </span> <br><br>
 					<table id="skilltable">
 
 						<tr>
@@ -87,13 +98,13 @@
 						</tr>
 
 						<tr>
-							<td class="leftalign"> CSS <span class="stars"> 4 </span> </td>
-							<td class="leftalign"> jQuery <span class="stars"> 3 </span> </td>
+							<td class="leftalign"> CSS <span class="stars"> 5 </span> </td>
+							<td class="leftalign"> jQuery <span class="stars"> 4 </span> </td>
 							<td class="leftalign"> C <span class="stars"> 4 </span> </td>
 						</tr>
 
 						<tr>
-							<td class="leftalign"> Javascript <span class="stars"> 4 </span> </td>
+							<td class="leftalign"> Javascript <span class="stars"> 5 </span> </td>
 							<td class="leftalign"> Git <span class="stars"> 3 </span> </td>
 							<td class="leftalign"> BASH <span class="stars"> 5 </span> </td>
 						</tr>
@@ -101,7 +112,7 @@
 						<tr>
 							<td class="leftalign"> Java <span class="stars"> 4 </span> </td>
 							<td class="leftalign"> Python <span class="stars"> 4 </span> </td>
-							<td class="leftalign"> Racket <span class="stars"> 4 </span> </td>
+							<td class="leftalign"> Racket <span class="stars"> 5 </span> </td>
 						</tr>
 
 					</table>
