Jonah's link still isn't secure, removing for now

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 				<div class="col-md-2">
 					<div class="project" onclick="switchFrame(0)"> Soccer Game </div>
-					<div class="project" onclick="switchFrame(1)"> Node Graphing Tool </div>
+					<!-- <div class="project" onclick="switchFrame(1)"> Node Graphing Tool </div> -->
 				</div>
 			</div>
 
