Copied over graph project from shared repo

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -1,5 +1,8 @@
 <html>
 <head>
+<title>
+Soccer
+</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 <script src="main.js"></script>
 </head>
