--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<title>Ian Lai</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="main.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -85,7 +86,7 @@
 				</div>
 
 			</div> <!--End aboutme row-->
-			<br><br>
+			<br>
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 centered">
 					<div class="title"> Technical Skills </div>
@@ -129,7 +130,7 @@
 
 				<div class="col-md-2">
 					<div class="project" onclick="switchFrame(0)"> Soccer Game </div>
-					<!-- <div class="project" onclick="switchFrame(1)"> Node Graphing Tool </div> -->
+					<div class="project" onclick="switchFrame(1)"> Node Graphing Tool </div>
 				</div>
 			</div>
 
