Added a textured background, made project iframe look a little nicer

--- a/index.html
+++ b/index.html
@@ -27,35 +27,35 @@
 						Ian Lai
 						<div class="subtitle"> Who am I? </div>
 					</div>
-					<img src="assets/sunpeaks.jpg" alt="Ian Lai">
+					<img class="titleimage" src="assets/sunpeaks.jpg" alt="Ian Lai">
 				</div>
 
 				<div class="item">
 					<div class="header centered">
 						Martial Artist
 					</div>
-					<img src="assets/tkd.jpg" alt="Martial Artist">
+					<img class="titleimage" src="assets/tkd.jpg" alt="Martial Artist">
 				</div>
 
 				<div class="item">
 					<div class="header centered">
 						Programmer
 					</div>
-					<img src="assets/cs.png" alt="Meta pic aha">
+					<img class="titleimage" src="assets/cs.png" alt="Meta pic aha">
 				</div>
 
 				<div class="item">
 					<div class="header centered">
 						Dragonboater
 					</div>
-					<img src="assets/db.jpg" alt="Dragonboater">
+					<img class="titleimage" src="assets/db.jpg" alt="Dragonboater">
 				</div>
 
 				<div class="item">
 					<div class="header centered">
 						24601
 					</div>
-					<img src="assets/24601.jpg" alt="24601">
+					<img class="titleimage" src="assets/24601.jpg" alt="24601">
 				</div>
 
 			</div>
@@ -78,7 +78,7 @@
 				<div class="col-md-8" id="aboutme">
 					My name is Ian Lai from Vancouver, Canada, and I am a 2B Computer Science student studying at the
 					<span class="b-orange"> University of Waterloo</span>.<br>
-					I am <span class="b-orange">insatiably passionate about programming</span> because to me, it represents an endless series of problems to provoke, challenge, and mentally stimulate me.
+					I am <span class="b-orange">crazily passionate about programming</span> because to me, it represents an endless series of problems to provoke, challenge, and mentally stimulate me.
 				</div>
 
 				<div class="col-md-3">
@@ -107,7 +107,7 @@
 						<tr>
 							<td class="leftalign"> Javascript <span class="stars"> 5 </span> </td>
 							<td class="leftalign"> Git <span class="stars"> 3 </span> </td>
-							<td class="leftalign"> BASH <span class="stars"> 5 </span> </td>
+							<td class="leftalign"> BASH <span class="stars"> 4 </span> </td>
 						</tr>
 
 						<tr>
@@ -124,13 +124,13 @@
 				<div class="title"> Projects </div>
 				
 				<div class="col-md-10 leftpad">
-					<iframe id="myframe" src="soccer/index.html"></iframe>
-					<div id="projectinfo">This is a small game I built with vanilla HTML, CSS, and Javascript, based on the Facebook Messenger game. It features a basic physics engine and a variable difficulty setting.</div>
+					<iframe id="myframe" seamless="seamless" frameBorder="0" src=""></iframe>
 				</div>
 
 				<div class="col-md-2">
 					<div class="project" onclick="switchFrame(0)"> Soccer Game </div>
 					<div class="project" onclick="switchFrame(1)"> Node Graphing Tool </div>
+					<div id="projectinfo">Click on a project above to check it out!</div>
 				</div>
 			</div>
 
