This is getting annoying

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 					I am crazily passionate about programming because to me, it represents an endless series of problems to <span class="b-orange">provoke, challenge, and mentally stimulate</span> me.
 				</div>
 				
-				<div class="col-md-4 col-xs-12">
+				<span class="col-md-4 col-xs-12">
 					<img src="assets/me.jpg" class="img-rounded" id="image">
-				</div>
+				</s0ah>
 
 			</div> <!--End aboutme row-->
 			<br>
