--- a/index.html
+++ b/index.html
@@ -73,19 +73,21 @@
 		</div> <!--Close Carousel-->
 
 		<div class="container-fluid">
-			<div class="row leftpad">
 
-				<div class="col-md-4 col-md-offset-2 col-xs-12" id="aboutme">
+			<div class="row">
+				<span class="col-md-4 col-md-offset-4 col-xs-12">
+					<img src="assets/me.jpg" class="img-rounded" id="image">
+				</span>
+			</div>
+
+			<div class="row">
+				<div class="col-md-4 col-md-offset-4 col-xs-12" id="aboutme">
 					My name is Ian Lai from Vancouver, Canada, and I am a 2B Computer Science student studying at the
 					<span class="b-orange"> University of Waterloo</span>.<br>
 					I am crazily passionate about programming because to me, it represents an endless series of problems to <span class="b-orange">provoke, challenge, and mentally stimulate</span> me.
 				</div>
-				
-				<span class="col-md-4 col-xs-12">
-					<img src="assets/me.jpg" class="img-rounded" id="image">
-				</s0ah>
-
 			</div> <!--End aboutme row-->
+
 			<br>
 			<div class="title"> Technical Skills </div>
 			<div class="row" id="skilllist">
