--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 		<div class="container-fluid">
 
 			<div class="row">
-				<span class="col-md-4 col-md-offset-4 col-xs-12">
-					<img src="assets/me.jpg" class="img-rounded" id="image">
-				</span>
-			</div>
+				<div class="col-md-4 col-md-offset-4 col-xs-12">
+					<img src="assets/me.jpg" id="image">
+				</div>
+			</div> <!--End picture row-->
 
 			<div class="row">
 				<div class="col-md-4 col-md-offset-4 col-xs-12" id="aboutme">
