This is getting annoying

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="carousel-inner" role="listbox">
 				<div class="item active">
 
-					<div class="header centered">
+					<div class="header">
 						Ian Lai
 						<div class="subtitle"> Who am I? </div>
 					</div>
@@ -31,28 +31,28 @@
 				</div>
 
 				<div class="item">
-					<div class="header centered">
+					<div class="header">
 						Martial Artist
 					</div>
 					<img class="titleimage" src="assets/tkd.jpg" alt="Martial Artist">
 				</div>
 
 				<div class="item">
-					<div class="header centered">
+					<div class="header">
 						Programmer
 					</div>
 					<img class="titleimage" src="assets/cs.png" alt="Meta pic aha">
 				</div>
 
 				<div class="item">
-					<div class="header centered">
+					<div class="header">
 						Dragonboater
 					</div>
 					<img class="titleimage" src="assets/db.jpg" alt="Dragonboater">
 				</div>
 
 				<div class="item">
-					<div class="header centered">
+					<div class="header">
 						24601
 					</div>
 					<img class="titleimage" src="assets/24601.jpg" alt="24601">
