--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 				<div class="item">
 					<div class="header">
-						Coder
+						Programmer
 					</div>
 					<img class="titleimage" src="assets/cs.png" alt="Meta pic aha">
 				</div>
