Added contact me info

--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@
 		<div id="iframebox" class="content">
 			<iframe id="myframe" seamless="seamless" frameBorder="0" src=""></iframe>
 		</div>
+
+		<div id="contactBox" class="content">
+			<div id="flexBox">
+				<a href="https://www.facebook.com/ian.lai.560" target="_blank"><img src="assets/bw_facebook.png" class="contactpic"></a>
+				<a href="https://www.linkedin.com/in/ian-lai-244971112/" target="_blank"><img src="assets/linkedin_bw.png" class="contactpic"></a>
+				<a href="mailto:ianlaiuw@gmail.com"><img src="assets/email.png" class="contactpic"></a>
+				<a href="https://github.com/snipower" target="_blank"><img src="assets/github-mark.png" class="contactpic"></a>
+			</div>
+		</div>
 	</div>	<!--Close Content Box-->
 
 	<div id="skilltable">
