--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
 		</title>
 		<link href="https://fonts.googleapis.com/css?family=BenchNine:300" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
 		<link rel="stylesheet" type="text/css" href="styles.css">
 		<script src="main.js"></script>
 	</head>
@@ -46,67 +43,41 @@
 		</span>
 	</div> <!--Close navmenu-->
 
-	<div id="contentbox">
-
-		<div id="aboutme" class="content">
+	<div id="aboutme" class="content">
 			My name is Ian Lai from Vancouver, Canada, and I am a 2B Computer Science student studying at the
 			<span class="b-orange"> University of Waterloo</span>.
 			I am incredibly passionate about programming because it represents an endless series of problems to <span class="b-orange">provoke, challenge, and mentally stimulate</span> me.
 		</div> <!--Close aboutme-->
 
+	<div class="contentBox">
 		<div id="carouselBox" class="content">
-			<div id="whoami" class="landing carousel slide" data-ride="carousel">
-
-				<ol class="carousel-indicators">
-					<li data-target="#whoami" data-slide-to="0" class="active"></li>
-					<li data-target="#whoami" data-slide-to="1"></li>
-					<li data-target="#whoami" data-slide-to="2"></li>
-					<li data-target="#whoami" data-slide-to="3"></li>
-				</ol> 
-
-				<div class="carousel-inner" role="listbox">
-				
-					<div class="item active">
-						<div class="thingsido">
-							Martial Artist
-						</div>
-						<img class="titleimage" src="assets/tkd.jpg" alt="Martial Artist">
-					</div>
-
-					<div class="item">
-						<div class="thingsido">
-							Programmer
-						</div>
-						<img class="titleimage" src="assets/cs.png" alt="Meta pic aha">
-					</div>
-
-					<div class="item">
-						<div class="thingsido">
-							Dragonboater
-						</div>
-						<img class="titleimage" src="assets/db.jpg" alt="Dragonboater">
-					</div>
-
-					<div class="item">
-						<div class="thingsido">
-							24601
-						</div>
-						<img class="titleimage" src="assets/24601.jpg" alt="24601">
-					</div>
-
+			<div class="item">
+				<div class="thingsido">
+					Martial Artist
 				</div>
+				<img class="titleimage" src="assets/tkd.jpg" alt="Martial Artist">
+			</div>
 
-				<a class="left carousel-control" href="#whoami" role="button" data-slide="prev">
-					<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				
-				<a class="right carousel-control" href="#whoami" role="button" data-slide="next">
-					<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
+			<div class="item">
+				<div class="thingsido">
+					Programmer
+				</div>
+				<img class="titleimage" src="assets/cs.png" alt="Meta pic aha">
+			</div>
 
-			</div> 
+			<div class="item">
+				<div class="thingsido">
+					Dragonboater
+				</div>
+				<img class="titleimage" src="assets/db.jpg" alt="Dragonboater">
+			</div>
+
+			<div class="item">
+				<div class="thingsido">
+					24601
+				</div>
+				<img class="titleimage" src="assets/24601.jpg" alt="24601">
+			</div>
 		</div> <!--Close Carousel-->
 
 		<div id="iframebox" class="content">
@@ -121,7 +92,7 @@
 				<a href="https://github.com/snipower" target="_blank"><img src="assets/github-mark.png" class="contactpic"></a>
 			</div>
 		</div>
-	</div>	<!--Close Content Box-->
+	</div>
 
 	<div id="skilltable">
 		<div class="skillcolumn">
