--- a/soccer/index.html
+++ b/soccer/index.html
@@ -10,10 +10,11 @@ Soccer
 	<div id="button" onclick="instructions()"> How-To </div>
 	<div id="descBox">
 		<span style="position:absolute;width:100%;text-align:left;">EASIER</span>
-		<span style="position:absolute;width:100%;text-align:right;">HARDER</span>
+		<span style="position:absolute;width:100%;text-align:right;">HARDER</span><br>
+		<input id="slider" type="range" min="1" max="10" value="5"/>
 	</div>
 	<br>
-	<input id="slider" type="range" min="1" max="10" value="5"/>
+
 		<div class="text">
 			High Score:
 			<div id="highscore">0</div>
