Added an icon, fixed some broken links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   	<script src="main.js"></script>
 	<title> Ian Lai </title>
-	<link rel="icon" href="">
+	<link rel="icon" href="assets/logo.png">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
@@ -38,20 +38,26 @@
 			<div class="project">
 				<img src="assets/graph.png" class="projectPic">
 				<div class="projectTitle">GraphEz</div>
-				<div class="overlay">A graph theory tool that I built in collaboration with Jonah Dlin. It utilises a tool based system to manipulate the graph. Canvas was used to display the nodes and edges, and Javascript and jQuery were used for the logic.</div>
+				<a target="_blank" href="http://jonahdlin.com/graph">
+					<div class="overlay">A graph theory tool that I built in collaboration with Jonah Dlin. It utilises a tool based system to manipulate the graph. Canvas was used to display the nodes and edges, and Javascript and jQuery were used for the logic.</div>
+				</a>
 			</div>
 
 			<div class="project">
 				<img src="assets/ball.png" class="projectPic">
 				<div class="projectTitle">Soccer Game</div>
-				<div class="overlay">A simple game with a basic physics engine I built from scratch, based on the Facebook Messenger soccer game. This was one of my first Javascript projects.
+				<a target="_blank" href="http://ianlai.ca/soccer">	
+					<div class="overlay">A simple game with a basic physics engine I built from scratch, based on the Facebook Messenger soccer game. This was one of my first Javascript projects.
 				</div>
+				</a>
 			</div>
 
 			<div class="project">
 				<img src="assets/music.png" class="projectPic">
 				<div class="projectTitle">Ear Training Tool</div>
-				<div class="overlay">A tool designed to develop and fine tune <!--pun intended--> pitch recognition skills. Web Audio API was used to connect to the client's speakers and produce a sound at the correct frequency. This project is still under development.</div>
+				<a target="_blank" href="http://ianlai.ca/eartraining">
+					<div class="overlay">A tool designed to develop and fine tune <!--pun intended--> pitch recognition skills. Web Audio API was used to connect to the client's speakers and produce a sound at the correct frequency. This project is still under development.</div>
+				</a>
 			</div>
 		</div>
 
