--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   	<script src="main.js"></script>
+  	<script src="analytics.js"></script>
 	<title> Ian Lai </title>
 	<link rel="icon" href="assets/logo.png">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
