Contact info UI is prettier, fixed some wording

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<div id="top"></div>
 		<p class="title">Hi :) I'm Ian.</p>
 		<nav id="buttonContainer">
-			<a class="button" href="#aboutmeBox">About Me</a>
-			<a class="button" href="#projectsBox">Projects</a>
-			<a class="button" href="#contactBox">Contact Me</a>
+			<a class="hoverGrow button" href="#aboutmeBox">About Me</a>
+			<a class="hoverGrow button" href="#projectsBox">Projects</a>
+			<a class="hoverGrow button" href="#contactBox">Contact Me</a>
 		</nav>
 		<div id="aboutmeBox" class="contentBox">
 			<div class="text">
@@ -31,12 +31,12 @@
 				I play the trombone and the piano <br>
 				</p>
 				<p>
-				Feel free to check out some things I've worked on over the last while!
+				Feel free to check out some things I've worked on!
 			</div>
 		</div>
 
 		<div id="projectsBox" class="contentBox">
-			<div class="project">
+			<div class="hoverGrow project">
 				<img src="assets/graph.png" class="projectPic">
 				<div class="projectTitle">GraphEz</div>
 				<a target="_blank" href="http://jonahdlin.com/graph">
@@ -44,7 +44,7 @@
 				</a>
 			</div>
 
-			<div class="project">
+			<div class="hoverGrow project">
 				<img src="assets/ball.png" class="projectPic">
 				<div class="projectTitle">Soccer Game</div>
 				<a target="_blank" href="http://ianlai.ca/soccer">	
@@ -53,7 +53,7 @@
 				</a>
 			</div>
 
-			<div class="project">
+			<div class="hoverGrow project">
 				<img src="assets/music.png" class="projectPic">
 				<div class="projectTitle">Ear Training Tool</div>
 				<a target="_blank" href="http://ianlai.ca/eartraining">
@@ -64,26 +64,26 @@
 
 		<div class="contentBox">
 			<p class="text">
-				If you're interested in reaching out, feel free to use any of the following mediums...
+				If you're interested in reaching out, feel free to use any of the following...
 			</p>
 		</div>
 
 		<div id="contactBox" class="contentBox">
-				<a href="https://www.facebook.com/ian.lai.560" target="_blank"><img src="assets/bw_facebook.png" class="contactPic"></a>
-				<a href="https://www.linkedin.com/in/ian-lai-244971112/" target="_blank"><img src="assets/linkedin_bw.png" class="contactPic"></a>
-				<a href="mailto:ianlaiuw@gmail.com"><img src="assets/email.png" class="contactPic"></a>
-				<a href="https://github.com/snipower" target="_blank"><img src="assets/github-mark.png" class="contactPic"></a>
+				<a href="https://www.facebook.com/ian.lai.560" target="_blank"><img src="assets/bw_facebook.png" class="hoverGrow contactPic"></a>
+				<a href="https://www.linkedin.com/in/ian-lai-244971112/" target="_blank"><img src="assets/linkedin_bw.png" class="hoverGrow contactPic"></a>
+				<a href="mailto:ianlaiuw@gmail.com"><img src="assets/email.png" class="hoverGrow contactPic"></a>
+				<a href="https://github.com/snipower" target="_blank"><img src="assets/github-mark.png" class="hoverGrow contactPic"></a>
 				
 		</div>
 
 		<div class="contentBox">
 			<div class="text">Finally, here's my resume! I'm currently looking for Co-op positions for September 2017 :) </div>
-			<a href="Ian_Lai_Resume.pdf" target="_blank"><img src="assets/resume.png" class="contactPic"></a>
+			<a href="Ian_Lai_Resume.pdf" target="_blank"><img src="assets/resume.png" class="hoverGrow contactPic"></a>
 		</div>
 
 		<div id="topBox">
 			<a href="#top">
-				<img id="topButton" src="assets/backtotop.png">
+				<img id="topButton" class="hoverGrow"src="assets/backtotop.png">
 			</a>
 		</div>
 	</body>
